[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ezseedfinder"
dynamic = ["version"]
description = "Fast Minecraft Java Edition seed finder with .ezsf criteria language and GUI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "EZ Seed Finder contributors" }]
keywords = ["minecraft", "seed", "seed-finder", "cubiomes", "speedrun"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Tk",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "cubiomespi-fork>=1.1.1",
]

[project.scripts]
ezsf = "ezseedfinder.__main__:main"

[project.urls]
Documentation = "https://pypi.org/project/ezseedfinder/"
"Source Code" = "https://github.com/OWNER/ezseedfinder"

[tool.setuptools.dynamic]
version = { attr = "ezseedfinder.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["ezseedfinder*"]

[tool.setuptools.package-data]
ezseedfinder = ["engine/*.json", "examples/*.ezsf"]
