[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ezseedfinder"
dynamic = ["version"]
description = "Fast Minecraft Java Edition seed finder with .ezsf criteria language and GUI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "EZ Seed Finder contributors" }]
keywords = ["minecraft", "seed", "seed-finder", "cubiomes", "speedrun"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = []

[project.scripts]
ezsf = "ezseedfinder.__main__:main"

[project.urls]
Documentation = "https://pypi.org/project/ezseedfinder/"
"Source Code" = "https://github.com/OWNER/ezseedfinder"

[tool.setuptools.dynamic]
version = { attr = "ezseedfinder.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["ezseedfinder*", "cubiomespi*"]

[tool.setuptools.package-data]
ezseedfinder = ["engine/*.json", "engine/loot_data/*.json", "examples/*.ezsf"]
cubiomespi = [
    "lib/*.c",
    "lib/cubiomes/*.c",
    "lib/cubiomes/*.h",
    "lib/cubiomes/tables/*.h",
]
